--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -8,53 +8,63 @@
 </head>
 <body class="font-[yekan] text-[#000000]">
     <!-- Header -->
-    <div class="w-full h-14 bg-gradient-to-r from-[#FAEFE9] to-[#FFA280] flex items-center justify-between px[5%]">
-        <a href="./index.html"><img src="../assets/images/logo.png" class="pt-5"/></a>
+    <div class="w-full h-14 xl:h-16 bg-gradient-to-r from-[#FAEFE9] to-[#FFA280] flex items-center justify-between xl:px-8">
+        <img src="../assets/images/logo.png" class="pt-5"/>
+        <div dir="rtl" class="gap-8 hidden xl:flex">
+            <a class="font-medium" href="./">خانه</a>
+            <a class="font-medium" href="./products.html">محصولات</a>
+            <a class="font-medium" href="./about.html">درباره ما</a>
+        </div>
         <div class="flex gap-5 items-center">
-            <input dir="rtl" id="search" type="text" placeholder="جستجو" class="input invisible input-bordered input-sm w-32 max-w-xs" />
-            <img src="../assets/icons/Search.svg" class="cursor-pointer" onclick="document.getElementById('search').classList.toggle('invisible')"/>
-            <div class="dropdown dropdown-bottom dropdown-end">
+            <a id="search-sub" class="invisible btn btn-sm">جستجو</a>
+            <input dir="rtl" id="search" type="text" placeholder="جستجو" class="input invisible input-bordered input-sm w-32 max-w-xs"/>
+            <img src="../assets/icons/Search.svg" class="cursor-pointer" onclick="toggleSearch()"/>
+            <div class="dropdown dropdown-bottom dropdown-end xl:hidden">
                 <img tabindex="0" src="../assets/icons/menu 1.svg" class="pr-5 m-1 hover:cursor-pointer"/>
                 <ul tabindex="0" class="dropdown-content -mt-[45px] menu bg-base-100 rounded-bl-xl z-[1] w-52 p-2 shadow">
-                  <li dir="rtl" class="font-medium text-lg"><a>صفحه اصلی</a></li>
-                  <li dir="rtl" class="font-medium text-lg"><a>محصولات</a></li>
+                <li dir="rtl" class="font-medium text-lg"><a href="./">خانه</a></li>
+                <li dir="rtl" class="font-medium text-lg"><a href="./about.html">درباره ما</a></li>
+                <li dir="rtl" class="font-medium text-lg"><a href="./products.html">محصولات</a></li>
                 </ul>
             </div>
         </div>
     </div>
 
     <!-- About us -->
-    <div dir="rtl" class="flex md:px-[10%] lg:flex-row flex-col justify-between px-6 py-10 gap-10  from-[#ffe2d7] to-50% to-[#FAEFE9] bg-[radial-gradient(circle_at_bottom_right,_var(--tw-gradient-stops))]">
-        <div class=" order-2 lg:order-1 lg:w-1/3">
+    <div dir="rtl" class="flex xl:py-14 md:px-[10%] lg:flex-row flex-col justify-between px-6 py-10 gap-10  from-[#ffe2d7] to-50% to-[#FAEFE9] bg-[radial-gradient(circle_at_bottom_right,_var(--tw-gradient-stops))]">
+        <div class=" order-2 lg:order-1 xl:w-[45%]">
             <h2 class="text-2xl font-medium">درباره ما</h2>
-            <p class=" text-xl pt-2">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان </p>
+            <p class=" text-xl pt-4">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان </p>
         </div>
-        <img src="../assets/images/about-2.png" class=" order-1 lg:order-2 "/>
+        <img src="../assets/images/about-2.png" class=" order-1 lg:order-2 xl:w-[45%] xl:h-72"/>
     </div>
 
     <div dir="rtl" class="flex md:px-[10%] lg:flex-row flex-col justify-between px-6 py-10 gap-10  from-[#ffe2d7] to-50% to-[#FAEFE9] bg-[radial-gradient(circle_at_top_right,_var(--tw-gradient-stops))]">
-        <img src="../assets/images/about-1.png" class=""/>
-        <div class="lg:w-1/3">
+        <img src="../assets/images/about-1.png" class="xl:w-[45%] xl:h-72"/>
+        <div class=" xl:w-[45%]">
             <h2 class="text-2xl font-medium">شروع به فعالیت</h2>
-            <p class=" text-xl pt-2">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان </p>
+            <p class=" text-xl pt-4">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان </p>
         </div>
     </div>
 
     <!-- Footer -->
-    <div dir="rtl" class="flex flex-col w-full bg-[#FFE8DB] gap-4">
-        <img class="-mt-14" src="../assets/images/logo-bigger.png"/>
-        <a href="#" class="font-medium text-xl px-16 -mt-10">درباره ما </a>
-        <a href="#" class="font-medium text-xl px-16">محصولات </a>
-        <a href="#" class="font-lg text-xl px-20">گردنبند </a>
-        <a href="#" class="font-lg text-xl px-20">دستبند </a>
-        <a href="#" class="font-lg text-xl px-20">گوشواره </a>
-        <div class="w-full flex justify-center gap-20 items-center p-7">
-            <img class="w-16" src="../assets/icons/telegram 1.png"/>
-            <img class="w-16" src="../assets/icons/instagram 1.png"/>
+    <div dir="rtl" class="flex flex-col xl:pb-14 w-full bg-[#FFE8DB] mt-10 gap-4 justify-center items-center xl:pt-10">
+        <img class="-mt-14 max-w-[400px]" src="../assets/images/logo-bigger.png"/>
+        <div class="w-full flex flex-col gap-4 xl:flex-row xl:justify-between  xl:px-[10%] xl:py-10">
+            <div class="flex flex-col gap-4">
+                <a href="./" class="font-medium text-xl px-16 -mt-10">خانه</a>
+                <a href="./about.html" class="font-medium text-xl px-16">درباره ما </a>
+                <a href="./products.html" class="font-medium text-xl px-16">محصولات</a>
+            </div>
+            <div class="flex justify-center gap-20 items-center p-7">
+                <img class="w-8" src="../assets/icons/telegram 1.png"/>
+                <img class="w-8" src="../assets/icons/instagram 1.png"/>
+                <img class="w-8" src="../assets/icons/whatsapp.png"/>
+            </div>
         </div>
         <div class="w-full h-[2px] bg-[#C3C3C3]"></div>
         <div class="flex justify-center pb-6">
-            <p class="text-xl ">طراحی شده توسط گروه <a href="https://minddev.ir/">مایند دو</a></p>
+            <p class="text-xl flex justify-center items-center">طراحی شده با <img class="w-8" src="../assets/icons/heart.png"/> در <a href="https://minddev.ir/" class="text-[#2d6ab9] mx-1"> MindDev </a></p>
         </div>
     </div>
 </body>
