--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,36 +6,45 @@
     <title>خانه</title>
     <link href="../style/output.css" rel="stylesheet">
 </head>
-<body class="font-[yekan] text-[#000000]">
+<body class=" text-[#000000]">
     <!-- Header -->
-    <div class="w-full h-14 bg-gradient-to-r from-[#FAEFE9] to-[#FFA280] flex items-center justify-between px[5%]">
+    <div class="w-full h-14 xl:h-16 bg-gradient-to-r from-[#FAEFE9] to-[#FFA280] flex items-center justify-between xl:px-8">
         <img src="../assets/images/logo.png" class="pt-5"/>
+        <div dir="rtl" class="gap-8 hidden xl:flex">
+            <a class="font-medium" href="./">خانه</a>
+            <a class="font-medium" href="./products.html">محصولات</a>
+            <a class="font-medium" href="./about.html">درباره ما</a>
+        </div>
         <div class="flex gap-5 items-center">
-            <input dir="rtl" id="search" type="text" placeholder="جستجو" class="input invisible input-bordered input-sm w-32 max-w-xs" />
-            <img src="../assets/icons/Search.svg" class="cursor-pointer" onclick="document.getElementById('search').classList.toggle('invisible')"/>
-            <div class="dropdown dropdown-bottom dropdown-end">
+            <a id="search-sub" class="invisible btn btn-sm">جستجو</a>
+            <input dir="rtl" id="search" type="text" placeholder="جستجو" class="input invisible input-bordered input-sm w-32 max-w-xs"/>
+            <img src="../assets/icons/Search.svg" class="cursor-pointer" onclick="toggleSearch()"/>
+            <div class="dropdown dropdown-bottom dropdown-end xl:hidden">
                 <img tabindex="0" src="../assets/icons/menu 1.svg" class="pr-5 m-1 hover:cursor-pointer"/>
                 <ul tabindex="0" class="dropdown-content -mt-[45px] menu bg-base-100 rounded-bl-xl z-[1] w-52 p-2 shadow">
-                  <li dir="rtl" class="font-medium text-lg"><a>درباره ما</a></li>
-                  <li dir="rtl" class="font-medium text-lg"><a>محصولات</a></li>
+                <li dir="rtl" class="font-medium text-lg"><a href="./">خانه</a></li>
+                <li dir="rtl" class="font-medium text-lg"><a href="./about.html">درباره ما</a></li>
+                <li dir="rtl" class="font-medium text-lg"><a href="./products.html">محصولات</a></li>
                 </ul>
-              </div>
+            </div>
         </div>
     </div>
 
     <!-- Hero -->
-    <div dir="rtl" class="w-full gap-10 px-9 py-16 flex -my-2 flex-col justify-center items-center bg-cover bg-center bg-no-repeat" style="background-image: url(../assets/images/main-1.png);">
+    <div dir="rtl" class="w-full gap-10 px-9 py-16 xl:py-28 flex -my-2 flex-col justify-center items-center bg-cover bg-center bg-no-repeat" style="background-image: url(../assets/images/main-1.png);">
         <h2 id="head-title" class="text-4xl font-bold"></h2>
         <p id="head-desc" class="text-3xl font-medium text-center"></p>
         <img id="head-img" src="../assets/images/main-2.png" class=""/>
-        <button class="btn bg-[#FFA280] border-[#FFA280] text-xl w-52 h-14 hover:bg-[#FFA280]">مشاهده محصول</button>
+        <a id="head-btn" href="" class="btn bg-[#FFA280] border-[#FFA280] text-xl w-52 h-14 hover:bg-[#FFA280]">مشاهده محصول</a>
     </div>
 
     <!-- Welcome -->
-    <div dir="rtl" class="bg-[#FFE8DB] gap-7 w-full px-8 py-8 flex flex-col justify-center items-center">
-        <h2 class="text-2xl">به پاندورا خوش آمدید</h2>
-        <img src="../assets/images/main-3.png"/>
-        <p class="text-lg">در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.</p>
+    <div dir="rtl" class="bg-[#FFE8DB] gap-7 w-full px-8 py-8 flex flex-col justify-center xl:justify-between items-center xl:flex-row xl:px-16 2xl:py-16 2xl:px-[15%]">
+        <img src="../assets/images/main-3.png" class="xl:order-2"/>
+        <div class=" xl:order-1 xl:w-[40%]">
+            <h2 class="text-2xl pb-6">به پاندورا خوش آمدید</h2>
+            <p class="text-lg">در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.</p>
+        </div>
     </div>
 
     <!-- Categories -->
@@ -45,7 +54,7 @@
             <div class="w-36 h-2 bg-[#FFA280] mt-3 rounded-3xl z-20"></div>
             <div class="w-[90%] h-1 bg-[#C5C5C5] rounded-3xl relative bottom-1"></div>
         </div>
-        <div id="category-con" class="flex flex-col w-full justify-center items-center gap-8 pt-6">
+        <div id="category-con" class="grid grid-cols-1 xl:grid-cols-4 w-full 2xl:px-52 items-center pt-6 gap-8">
 
         </div>
     </div>
@@ -57,7 +66,7 @@
             <div class="w-36 h-2 bg-[#FFA280] mt-3 rounded-3xl z-20"></div>
             <div class="w-[90%] h-1 bg-[#C5C5C5] rounded-3xl relative bottom-1"></div>
         </div>
-        <div id="product-con" dir="rtl" class="grid grid-cols-2 w-full justify-items-center pt-4 ">
+        <div id="product-con" dir="rtl" class="grid grid-cols-2 w-full justify-items-center pt-4 gap-8 xl:grid-cols-4 2xl:px-52">
             
         </div>
     </div>
@@ -70,13 +79,15 @@
             <div class="w-36 h-2 bg-[#FFA280] mt-3 rounded-3xl z-20"></div>
             <div class="w-[90%] h-1 bg-[#C5C5C5] rounded-3xl relative bottom-1"></div>
         </div>
-        <div class="flex flex-col w-full justify-center items-center pt-4">
-            <div dir="rtl" id="special-con" class="flex flex-col justify-between max-w-[350px] w-full p-3 min-h-[400px] min-w-[300px] bg-cover bg-center bg-no-repeat" style="background-image: url(../assets/images/main-6.png);">
-                <div></div>
-                <div class="flex justify-between items-center">
-                    <p class=" text-2xl font-bold pt-3">10,000,000</p>
-                    <a href="#" class="pt-1 text-lg btn bg-[#FFA280] text-white border-[#FFA280] hover:bg-[#FFA280]">مشاهده محصول</a>
-                </div>    
+        <div dir="rtl" class="grid grid-cols-1 xl:grid-cols-2">
+            <div class="flex flex-col w-full justify-center items-center pt-4">
+                <div dir="rtl" id="special-con" class="flex flex-col justify-between max-w-[350px] w-full p-3 min-h-[400px] min-w-[300px] bg-cover bg-center bg-no-repeat" style="background-image: url(../assets/images/main-6.png);">
+                    <div></div>
+                    <div class="flex justify-between items-center">
+                        <p class=" text-2xl font-bold pt-3">10,000,000</p>
+                        <a href="#" class="pt-1 text-lg btn bg-[#FFA280] text-white border-[#FFA280] hover:bg-[#FFA280]">مشاهده محصول</a>
+                    </div>    
+                </div>
             </div>
         </div>
     </div>
@@ -95,7 +106,7 @@
                     <h3 class="text-xl font-bold">دانیال برزگر</h3>
                     <p class="text-lg px-14">کارهاتون خیلی با دوامه و کیفیتش عالیه بعد چند سال هنوز مثل روز اولشه</p>
                 </div>
-                <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between items-center">
+                <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between items-center xl:px-52 2xl:px-[30%]">
                     <a href="#slide2" class=" btn-circle pt-12 " >❮</a>
                     <a href="#slide2" class="btn-circle pt-12 pl-6">❯</a>
                 </div>
@@ -106,7 +117,7 @@
                     <h3 class="text-xl font-bold">پوریا غیاثی</h3>
                     <p class="text-lg px-14">کارهاتون خیلی با دوامه و کیفیتش عالیه بعد چند سال هنوز مثل روز اولشه</p>
                 </div>
-                <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between items-center">
+                <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between items-center xl:px-52 2xl:px-[30%]">
                     <a href="#slide1" class=" btn-circle bg-[] pt-12 " >❮</a>
                     <a href="#slide1" class="btn-circle pt-12 pl-6">❯</a>
                 </div>
@@ -115,13 +126,13 @@
     </div>
 
     <!-- Instagram -->
-    <div class="bg-cover bg-center bg-no-repeat flex flex-col justify-center items-center p-16" style="background-image: url(../assets/images/main-8.png);">
+    <div class="bg-cover bg-center bg-no-repeat flex flex-col justify-center items-center p-16 xl:py-32" style="background-image: url(../assets/images/main-8.png);">
         <h3 class="font-bold text-2xl pb-7">Pandora instagram</h3>
-        <div class="flex flex-col items-center justify-center p-7 border-4 bg-white rounded-t-3xl border-black  gap-5">
+        <div class="flex flex-col items-center justify-center p-7 border-4 bg-white rounded-t-3xl border-black  gap-5 xl:p-14">
             <img src="../assets/icons/instagram 1.png"/>
             <p class="text-2xl font-bold">@pandora</p>
         </div>
-        <a href="#" class="text-2xl font-medium border-x-4 border-b-4 rounded-b-3xl border-black px-[30px] py-3 bg-white">دنبال کردن</a>
+        <a href="#" class="text-2xl font-medium border-x-4 border-b-4 rounded-b-3xl border-black xl:px-[58px] px-[31px] py-3 bg-white">دنبال کردن</a>
     </div>
 
     <!-- FAQ -->
@@ -131,7 +142,7 @@
             <div class="w-36 h-2 bg-[#FFA280] mt-3 rounded-3xl z-20"></div>
             <div class="w-[90%] h-1 bg-[#C5C5C5] rounded-3xl relative bottom-1"></div>
         </div>
-        <div dir="rtl" class="join join-vertical w-full">
+        <div dir="rtl" class="join join-vertical w-full xl:px-52 2xl:px-[30%]">
             <div class="collapse collapse-arrow join-item border-base-300 border">
               <input type="radio" name="my-accordion-4" checked="checked" />
               <div class="collapse-title text-xl font-medium">چرا پاندورا گالری؟</div>
@@ -156,49 +167,63 @@
           </div>
     </div>
 
-    <div class="w-full flex ">
-        <img src="../assets/images/main-5.png" class="w-1/3 hover:grayscale-0 grayscale transition delay-500"/>
-        <img src="../assets/images/main-2.png" class="w-1/3 hover:grayscale-0 grayscale transition delay-500"/>
-        <img src="../assets/images/main-5.png" class="w-1/3 hover:grayscale-0 grayscale transition delay-500"/>
+    <div class="w-full grid grid-cols-3 xl:grid-cols-6 2xl:hidden">
+        <img src="../assets/images/main-5.png" class="w-full h-40 xl:h-52 hover:grayscale-0 grayscale transition delay-500"/>
+        <img src="../assets/images/main-2.png" class="w-full h-40 xl:h-52 hover:grayscale-0 grayscale transition delay-500"/>
+        <img src="../assets/images/main-5.png" class="w-full h-40 xl:h-52 hover:grayscale-0 grayscale transition delay-500"/>
+        <img src="../assets/images/main-2.png" class="w-full h-40 xl:h-52 hover:grayscale-0 grayscale transition delay-500 hidden xl:block"/>
+        <img src="../assets/images/main-5.png" class="w-full h-40 xl:h-52 hover:grayscale-0 grayscale transition delay-500 hidden xl:block"/>
+        <img src="../assets/images/main-2.png" class="w-full h-40 xl:h-52 hover:grayscale-0 grayscale transition delay-500 hidden xl:block"/>
     </div>
 
     <!-- Footer -->
-    <div dir="rtl" class="flex flex-col w-full bg-[#FFE8DB] mt-10 gap-4">
-        <img class="-mt-14" src="../assets/images/logo-bigger.png"/>
-        <a href="#" class="font-medium text-xl px-16 -mt-10">درباره ما </a>
-        <a href="#" class="font-medium text-xl px-16">محصولات </a>
-        <a href="#" class="font-lg text-xl px-16">گردنبند </a>
-        <a href="#" class="font-lg text-xl px-16">دستبند </a>
-        <a href="#" class="font-lg text-xl px-16">گوشواره </a>
-        <div class="w-full flex justify-center gap-20 items-center p-7">
-            <img class="w-16" src="../assets/icons/telegram 1.png"/>
-            <img class="w-16" src="../assets/icons/instagram 1.png"/>
+    <div dir="rtl" class="flex flex-col w-full bg-[#FFE8DB] mt-10 gap-4 justify-center items-center xl:pt-10">
+        <img class="-mt-14 max-w-[400px]" src="../assets/images/logo-bigger.png"/>
+        <div class="w-full flex flex-col gap-4 xl:flex-row xl:justify-between  xl:px-[10%] xl:py-10">
+            <div class="flex flex-col gap-4">
+                <a href="./" class="font-medium text-xl px-16 -mt-10">خانه</a>
+                <a href="./about.html" class="font-medium text-xl px-16">درباره ما </a>
+                <a href="./products.html" class="font-medium text-xl px-16">محصولات</a>
+            </div>
+            <div class="flex justify-center gap-20 items-center p-7">
+                <img class="w-8" src="../assets/icons/telegram 1.png"/>
+                <img class="w-8" src="../assets/icons/instagram 1.png"/>
+                <img class="w-8" src="../assets/icons/whatsapp.png"/>
+            </div>
         </div>
         <div class="w-full h-[2px] bg-[#C3C3C3]"></div>
         <div class="flex justify-center pb-6">
-            <p class="text-xl ">طراحی شده توسط گروه <a href="https://minddev.ir/">مایند دو</a></p>
+            <p class="text-xl flex justify-center items-center">طراحی شده با <img class="w-8" src="../assets/icons/heart.png"/> در <a href="https://minddev.ir/" class="text-[#2d6ab9] mx-1"> MindDev </a></p>
         </div>
     </div>
 </body>
+<script>
+    const toggleSearch = () => {
+        document.getElementById('search').classList.toggle('invisible')
+        document.getElementById('search-sub').classList.toggle('invisible')
+    }
+    const searchSub = document.getElementById('search-sub')
+    searchSub.addEventListener('click', () => {
+        window.location.replace(`./products.html?search=${document.getElementById('search').value}`)
+    })
+</script>
 <script type="module">
     import {apiUrl} from '../scripts/api.js'
-    const faNum = (num) => {
-        return new Intl.NumberFormat('fa-IR', {style : "decimal" }).format(num).replace(/٬/g , "")
-    }
     fetch(`${apiUrl()}/products/`)  
             .then(response => response.json())  
             .then(data => {  
-                document.getElementById('head-title').innerHTML = data[0].name
-                document.getElementById('head-desc').innerHTML = data[0].description
-                document.getElementById('head-img').setAttribute('src',`${apiUrl()}${data[0].image}`)
+                document.getElementById('head-title').innerHTML = data[0][0].name
+                document.getElementById('head-desc').innerHTML = data[0][0].description
+                document.getElementById('head-img').setAttribute('src',`${apiUrl()}${data[0][0].image}`)
+                document.getElementById('head-btn').setAttribute('href',`./product.html?id=${data[0][0].id}`)
                 const productCon = document.getElementById('product-con')
                 const categoryCon = document.getElementById('category-con')
-                data.forEach(item => {  
+                data[0].forEach(item => {  
                     const div = document.createElement('div');
                     div.className =  'flex flex-col max-w-[160px]'
                     div.innerHTML = `  
-                        <img src="${apiUrl()}${item.image}" class="max-w-[140px]"/>
-                        <h3 class="text-[#FFA280] text-2xl font-bold pt-3">${item.name}</h3>
+                        <img src="${apiUrl()}${item.image}" class="max-w-[140px] xl:max-w-[300px]"/>
+                        <a href="./product.html?id=${item.id}" class="text-[#FFA280] text-2xl text-center font-bold pt-3">${item.name}</a>
                         <p class="pt-1 text-lg">${item.description}</p>
                     `;  
                     productCon.appendChild(div); 
@@ -214,12 +239,12 @@
             const div = document.createElement('div');
             div.className =  'flex flex-col w-full justify-center items-center gap-4'
             div.innerHTML = `  
-                <a href="#"><img src="${apiUrl()}${item.image}"/></a>
-                <a href="#"><h3 class="text-[#FFA280] text-2xl font-bold">${item.name}</h3></a>
+                <a href="./products.html?category=${item.name}"><img src="${apiUrl()}${item.image}" class='h-48 max-w-48'/></a>
+                <a href="./products.html?category=${item.name}"><h3 class="text-[#FFA280] text-2xl font-bold">${item.name}</h3></a>
             `;  
             categoryCon.appendChild(div); 
         }); 
     })  
-    .catch(error => console.error('Error fetching data:', error)); 
+    .catch(error => console.error('Error fetching data:', error));
 </script>
 </html>
