--- a/src/pages/products.html
+++ b/src/pages/products.html
@@ -7,20 +7,27 @@
     <link href="../style/output.css" rel="stylesheet">
     
 </head>
-<body class="font-[yekan] text-[#000000] flex flex-col justify-center  from-[#ffe2d7] to-50% to-[#FAEFE9] bg-[radial-gradient(circle_at_top_right,_var(--tw-gradient-stops))]">
+<body class=" text-[#000000] flex flex-col justify-center  from-[#ffe2d7] to-50% to-[#FAEFE9] bg-[radial-gradient(circle_at_top_right,_var(--tw-gradient-stops))]">
     <!-- Header -->
-    <div class="w-full h-14 bg-gradient-to-r from-[#FAEFE9] to-[#FFA280] flex items-center justify-between px[5%]">
+    <div class="w-full h-14 xl:h-16 bg-gradient-to-r from-[#FAEFE9] to-[#FFA280] flex items-center justify-between xl:px-8">
         <img src="../assets/images/logo.png" class="pt-5"/>
+        <div dir="rtl" class="gap-8 hidden xl:flex">
+            <a class="font-medium" href="./">خانه</a>
+            <a class="font-medium" href="./products.html">محصولات</a>
+            <a class="font-medium" href="./about.html">درباره ما</a>
+        </div>
         <div class="flex gap-5 items-center">
-            <input dir="rtl" id="search" type="text" placeholder="جستجو" class="input invisible input-bordered input-sm w-32 max-w-xs" />
-            <img src="../assets/icons/Search.svg" class="cursor-pointer" onclick="document.getElementById('search').classList.toggle('invisible')"/>
-            <div class="dropdown dropdown-bottom dropdown-end">
+            <a id="search-sub" class="invisible btn btn-sm">جستجو</a>
+            <input dir="rtl" id="search" type="text" placeholder="جستجو" class="input invisible input-bordered input-sm w-32 max-w-xs"/>
+            <img src="../assets/icons/Search.svg" class="cursor-pointer" onclick="toggleSearch()"/>
+            <div class="dropdown dropdown-bottom dropdown-end xl:hidden">
                 <img tabindex="0" src="../assets/icons/menu 1.svg" class="pr-5 m-1 hover:cursor-pointer"/>
                 <ul tabindex="0" class="dropdown-content -mt-[45px] menu bg-base-100 rounded-bl-xl z-[1] w-52 p-2 shadow">
-                  <li dir="rtl" class="font-medium text-lg"><a>درباره ما</a></li>
-                  <li dir="rtl" class="font-medium text-lg"><a>محصولات</a></li>
+                <li dir="rtl" class="font-medium text-lg"><a href="./">خانه</a></li>
+                <li dir="rtl" class="font-medium text-lg"><a href="./about.html">درباره ما</a></li>
+                <li dir="rtl" class="font-medium text-lg"><a href="./products.html">محصولات</a></li>
                 </ul>
-              </div>
+            </div>
         </div>
     </div>
 
@@ -29,25 +36,31 @@
     </div>
 
     <!-- Filter section -->
-    <div id="filter" dir="rtl" class=" p-5 border-2 gap-3 border-black flex justify-start m-5 rounded-xl flex-col ">
-        <p class="font-medium text-xl">قیمت</p>
-        <div class="flex gap-4">
-            <input type="range" min="0" max="100000000" value="0" class="slider " id="rangeMin" oninput="updateValues()">
-            <p id="minValue">حداقل قیمت:</p>
+    <div id="filter" dir="rtl" class=" p-5 xl:py-10 border-2 gap-3 border-black flex justify-center items-center m-5 rounded-xl flex-col xl:flex-row xl:gap-20">
+        <div class="gap-3 flex flex-col">  
+            <p class="font-medium text-xl">قیمت</p>
+            <div class="flex gap-4">
+                <input id="minPrice" type="range" min="0" max="100000000" value="0" class="slider " id="rangeMin" oninput="updateValues()">
+                <p id="minValue">حداقل:</p>
+            </div>
+            <div class="flex gap-4">
+                <input id="maxPrice" type="range" min="0" max="100000000" value="100000000" class="slider" id="rangeMax" oninput="updateValues()">
+                <p id="maxValue">حداکثر:</p>
+            </div>
         </div>
-        <div class="flex gap-4">
-            <input type="range" min="0" max="100000000" value="100000000" class="slider" id="rangeMax" oninput="updateValues()">
-            <p id="maxValue">حداکثر:</p>
+        <div class="gap-3 flex flex-col">
+            <p class="font-medium text-xl pt-5">نمایش بر اساس</p>
+            <select id="order-con" class="select select-bordered w-full max-w-xs  xl:w-44">
+                <option selected>جدیدترین</option>
+                <option>قیمت</option>
+            </select>
         </div>
-        <p class="font-medium text-xl pt-5">نمایش بر اساس</p>
-        <select class="select select-bordered w-full max-w-xs">
-            <option selected>جدیدترین</option>
-            <option>قیمت</option>
-        </select>
-        <p class="font-medium text-xl pt-5">دسته بندی</p>
-        <select id="cat-con" class="select select-bordered w-full max-w-xs">
-            <option selected></option>
-        </select>
+        <div class="gap-3 flex flex-col">
+            <p class="font-medium text-xl pt-5">دسته بندی</p>
+            <select id="cat-con" class="select select-bordered w-full max-w-xs xl:w-44">
+                <option selected></option>
+            </select>
+        </div>
         <button id="filter-sub" class="pt-1 mt-5 text-lg btn w-44 bg-[#FFA280] text-white border-[#FFA280] hover:bg-[#FFA280]">اعمال فیلتر ها</button>
     </div>
 
@@ -58,39 +71,42 @@
             <div class="w-36 h-2 bg-[#FFA280] mt-3 rounded-3xl z-20"></div>
             <div class="w-[90%] h-1 bg-[#C5C5C5] rounded-3xl relative bottom-1"></div>
         </div>
-        <div id='product-con' dir="rtl" class="grid grid-cols-2 w-full justify-items-center pt-4 ">
+        <div id='product-con' dir="rtl" class="grid grid-cols-2 xl:grid-cols-4 gap-8 w-full justify-items-center pt-4 ">
             
         </div>
         <div dir="rtl" class="flex gap-2 justify-center items-center" >
             <p>صفحه</p>
-            <input id="page-input" type="number" value="1" class="input input-bordered input-sm max-w-xs w-14"/>
-            <p>از 5</p>
+            <input id="page-input" type="number" value="1" class="input input-bordered input-sm max-w-xs w-14" min="1"/>
+            <p>از <span id="page-count"></span> </p>
         </div>
         <button id="page-btn" class="pt-1 text-lg btn bg-[#FFA280] text-white border-[#FFA280] hover:bg-[#FFA280]">صفحه بعد</button>
     </div>
 
     <!-- Footer -->
-    <div dir="rtl" class="flex flex-col w-full bg-[#FFE8DB] gap-4">
-        <img class="-mt-14" src="../assets/images/logo-bigger.png"/>
-        <a href="#" class="font-medium text-xl px-16 -mt-10">درباره ما </a>
-        <a href="#" class="font-medium text-xl px-16">محصولات </a>
-        <a href="#" class="font-lg text-xl px-20">گردنبند </a>
-        <a href="#" class="font-lg text-xl px-20">دستبند </a>
-        <a href="#" class="font-lg text-xl px-20">گوشواره </a>
-        <div class="w-full flex justify-center gap-20 items-center p-7">
-            <img class="w-16" src="../assets/icons/telegram 1.png"/>
-            <img class="w-16" src="../assets/icons/instagram 1.png"/>
+    <div dir="rtl" class="flex flex-col w-full bg-[#FFE8DB] mt-10 gap-4 justify-center items-center xl:pt-10">
+        <img class="-mt-14 max-w-[400px]" src="../assets/images/logo-bigger.png"/>
+        <div class="w-full flex flex-col gap-4 xl:flex-row xl:justify-between  xl:px-[10%] xl:py-10">
+            <div class="flex flex-col gap-4">
+                <a href="./" class="font-medium text-xl px-16 -mt-10">خانه</a>
+                <a href="./about.html" class="font-medium text-xl px-16">درباره ما </a>
+                <a href="./products.html" class="font-medium text-xl px-16">محصولات</a>
+            </div>
+            <div class="flex justify-center gap-20 items-center p-7">
+                <img class="w-8" src="../assets/icons/telegram 1.png"/>
+                <img class="w-8" src="../assets/icons/instagram 1.png"/>
+                <img class="w-8" src="../assets/icons/whatsapp.png"/>
+            </div>
         </div>
         <div class="w-full h-[2px] bg-[#C3C3C3]"></div>
         <div class="flex justify-center pb-6">
-            <p class="text-xl ">طراحی شده توسط گروه <a href="https://minddev.ir/">مایند دو</a></p>
+            <p class="text-xl flex justify-center items-center">طراحی شده با <img class="w-8" src="../assets/icons/heart.png"/> در <a href="https://minddev.ir/" class="text-[#2d6ab9] mx-1"> MindDev </a></p>
         </div>
     </div>
 </body>
 <script>  
     function updateValues() {  
-        const rangeMin = document.getElementById('rangeMin');  
-        const rangeMax = document.getElementById('rangeMax'); 
+        const rangeMin = document.getElementById('minPrice');  
+        const rangeMax = document.getElementById('maxPrice'); 
         function priceOpt(x) {
             const n = Math.ceil(x / 1000000) * 1000000
             return n.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
@@ -103,22 +119,37 @@
     }  
     document.addEventListener("DOMContentLoaded", updateValues);
 </script>  
+
 <script type="module">
     import {apiUrl} from '../scripts/api.js'
     var currentPage = 1
+    var maxPage = null
     const categoryCon = document.getElementById('cat-con')
+    const orderCon = document.getElementById('order-con')
+    const minPrice = document.getElementById('minPrice')
+    const maxPrice = document.getElementById('maxPrice')
     const category = ()=>{
         if(categoryCon.value){
             return 'category='+categoryCon.value
         }
     }
+    const order = () => {
+        if(orderCon.value === 'جدیدترین'){
+            return 'order=created_at'
+        } else if(orderCon.value === 'قیمت'){
+            return 'order=price'
+        }
+    }
     function getProducts(){
-        fetch(`${apiUrl()}/products/?perpage=2&page=${currentPage}&${category()}`)  
-        .then(response => response.json())  
+        fetch(`${apiUrl()}/products/?perpage=2&page=${currentPage}&${category()}&${order()}&from=${minPrice.value}&to=${maxPrice.value}&search=${urlParams.get('search')}`)  
+        .then(response => response.json())
         .then(data => {
+            maxPage = Math.ceil(data[1]/2)
+            pageCount.innerHTML = maxPage
+            pageInput.setAttribute('max',maxPage)
             const productCon = document.getElementById('product-con')
             productCon.innerHTML = ''
-            data.forEach(item => {  
+            data[0].forEach(item => {  
                 const div = document.createElement('div');
                 div.className =  'flex flex-col max-w-[160px]'
                 div.innerHTML = `  
@@ -132,20 +163,28 @@
         .catch(error => console.error('Error fetching data:', error));
     }
 
+    const queryString = window.location.search;
+    const urlParams = new URLSearchParams(queryString);
+    if(urlParams.has('category')){
+        categoryCon.value =  urlParams.get('category')
+        categoryCon.innerHTML =  urlParams.get('category')
+    }
     getProducts()
     const pageInput = document.getElementById('page-input')
     const pageBtn = document.getElementById('page-btn')
     const filterSub = document.getElementById('filter-sub')
-    filterSub.onclick = getProducts()
+    const pageCount = document.getElementById('page-count')
+    filterSub.onclick = () => getProducts()
     pageInput.onchange=()=>{
         currentPage=pageInput.value
         getProducts()
     }
-    pageBtn.onclick=()=>{
-        console.log(currentPage)
+    pageBtn.addEventListener('click',()=>{
+        if (currentPage+1 > maxPage){return}
         currentPage+=1
+        pageInput.value = currentPage
         getProducts()
-    }
+    })
 
     fetch(`${apiUrl()}/ctegories/`)  
     .then(response => response.json())  
@@ -154,6 +193,7 @@
         data.forEach(item => {  
             const opt = document.createElement('option');
             opt.innerHTML = item.name
+            opt.value = item.name
             categoryCon.appendChild(opt);
         }); 
     })  
